--- a/app/src/main/res/layout/item_list_students.xml
+++ b/app/src/main/res/layout/item_list_students.xml
@@ -8,34 +8,35 @@
     <TextView
             android:id="@+id/tv_id"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_gravity="center"
-            android:gravity="center"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="15dp"
             android:text="ID"
             android:textSize="20sp"
-            android:textColor="#000000"
+            android:textColor="@android:color/holo_red_dark"
             android:layout_weight="1" android:textStyle="bold"/>
 
     <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="ФИО"
             android:textSize="20sp"
             android:textColor="#000000"
-            android:layout_weight="5" android:textStyle="bold"/>
+            android:layout_weight="5"/>
 
     <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="Время"
             android:textSize="20sp"
             android:textColor="#000000"
-            android:layout_weight="1" android:textStyle="bold"/>
+            android:layout_weight="1"/>
 
 </LinearLayout>
